[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/UI/HideBasedOnInputMethod.gd" type="Script" id=1]
[ext_resource path="res://Sprites/UI/Tutorial Button Icons/sRGB/Y Button.png" type="Texture" id=2]
[ext_resource path="res://Sprites/UI/Tutorial Button Icons/sRGB/E Key.png" type="Texture" id=3]
[ext_resource path="res://Actors/BaseActors/Actor.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/Actors/InteractableActor.gd" type="Script" id=5]

[sub_resource type="SphereShape" id=1]
radius = 1.5

[sub_resource type="QuadMesh" id=6]
size = Vector2( 0.38, 0.38 )

[sub_resource type="SpatialMaterial" id=3]
flags_unshaded = true
params_use_alpha_scissor = true
params_alpha_scissor_threshold = 0.98
albedo_texture = ExtResource( 3 )

[sub_resource type="SpatialMaterial" id=5]
flags_unshaded = true
params_use_alpha_scissor = true
params_alpha_scissor_threshold = 0.98
albedo_texture = ExtResource( 2 )

[node name="InteractableActor" instance=ExtResource( 4 )]
script = ExtResource( 5 )

[node name="PlayerDetector" type="Area" parent="." index="3"]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape" type="CollisionShape" parent="PlayerDetector" index="0"]
shape = SubResource( 1 )

[node name="InteractButton" type="Spatial" parent="." index="4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
visible = false

[node name="Keyboard" type="MeshInstance" parent="InteractButton" index="0"]
mesh = SubResource( 6 )
material/0 = SubResource( 3 )
script = ExtResource( 1 )
is_controller = false

[node name="Controller" type="MeshInstance" parent="InteractButton" index="1"]
mesh = SubResource( 6 )
material/0 = SubResource( 5 )
script = ExtResource( 1 )

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_PlayerDetector_body_exited"]
